config package refactored and simplified