@@ -6,9 +6,12 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
+/**
+ * CORS Configuration
+ * Configures Cross-Origin Resource Sharing for the application
+ */
 @Configuration
 public class CorsConfig {
 
@@ -16,49 +19,24 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow credentials (cookies, authorization headers)
         config.setAllowCredentials(true);
+        config.setAllowedOriginPatterns(List.of("*"));
 
-        // Allow all origins (for development - restrict in production)
-        config.setAllowedOriginPatterns(Arrays.asList("*"));
-
-        // Alternatively, specify specific origins for production:
-        // config.setAllowedOrigins(Arrays.asList(
-        //     "http://localhost:3000",
-        //     "http://localhost:4200",
-        //     "https://your-frontend-domain.com"
-        // ));
-
-        // Allow all headers
-        config.setAllowedHeaders(Arrays.asList(
-            "Origin",
-            "Content-Type",
-            "Accept",
-            "Authorization",
-            "Access-Control-Request-Method",
-            "Access-Control-Request-Headers",
-            "X-Requested-With"
+        // Allow common headers
+        config.setAllowedHeaders(List.of(
+            "Origin", "Content-Type", "Accept", "Authorization",
+            "Access-Control-Request-Method", "Access-Control-Request-Headers", "X-Requested-With"
         ));
 
-        // Allow all HTTP methods
-        config.setAllowedMethods(Arrays.asList(
-            "GET",
-            "POST",
-            "PUT",
-            "DELETE",
-            "PATCH",
-            "OPTIONS"
+        // Allow all standard HTTP methods
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+
+        // Expose necessary headers
+        config.setExposedHeaders(List.of(
+            "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials", "Authorization"
         ));
 
-        // Expose headers that can be accessed by the client
-        config.setExposedHeaders(Arrays.asList(
-            "Access-Control-Allow-Origin",
-            "Access-Control-Allow-Credentials",
-            "Authorization"
-        ));
-
-        // Max age of the CORS pre-flight request cache (in seconds)
-        config.setMaxAge(3600L);
+        config.setMaxAge(3600L); // Cache pre-flight request for 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
@@ -66,4 +44,3 @@ public class CorsConfig {
         return new CorsFilter(source);
     }
 }
-
